# rules_kotlin

./: .bazelignore  .bazelproject  .bazelrc  .bazelversion  .editorconfig  .gitignore  .pre-commit-config.yaml  0001-Try-to-add-ksp-to-annotation-processing.patch  AUTHORS  BUILD  BUILD.release.bazel  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS  CompileAvoidance.md  KSP_MIGRATION_PLAN.md  MODULE.bazel  MODULE.release.bazel  Makefile  README.md  ROADMAP.md  WORKSPACE  WORKSPACE.bzlmod  WORKSPACE.dev.bazel  WORKSPACE.release.bazel  bit-ignore.bazelrc  changes.txt  kotlin_rules_maven_install.json  master-builder  rules_kotlin_dev_maven_install.json  rules_kotlin_maven_dev_install.json  rules_kotlin_maven_install.json
docs/: BUILD  BUILD.bazel  are_docs_up_to_date_test.sh  index.html  kotlin.md
docs/kotlin/: kotlin.html  toolchains.html
examples/android/: .bazelproject  .bazelrc  .bazelversion  BUILD  MODULE.bazel  WORKSPACE  WORKSPACE.bzlmod  android.bazelproject  maven_install.json
examples/android/app/: BUILD.bazel  bundleConfig.pb.json
examples/android/app/src/main/: AndroidManifest.xml
examples/android/bzl/: BUILD.bazel
examples/android/exclude/: 8.0.0-pre.20240206.3
examples/android/lib/: BUILD.bazel
examples/android/lib/src/main/: AndroidManifest.xml
examples/android/lib2/: BUILD.bazel
examples/android/lib2/res/values/: strings.xml
examples/android/lib2/res/values-en-rAU/: strings.xml
examples/android/lib2/res/values-en-rGB/: strings.xml
examples/android/lib2/res/values-es/: strings.xml
examples/android/lib2/res/values-fr-rCA/: strings.xml
examples/android/lib2/src/main/: AndroidManifest.xml
examples/android/libAndroid/: BUILD.bazel
examples/android/libAndroid/res/values-ja/: strings.xml
examples/android/libAndroid/src/main/: AndroidManifest.xml
examples/android/libJava/: BUILD.bazel
examples/android/libKtAndroid/: BUILD.bazel
examples/android/libKtAndroid/res/values/: strings.xml
examples/android/libKtAndroid/res2/values/: strings.xml
examples/android/libKtAndroid/src/main/: AndroidManifest.xml
examples/anvil/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  maven_install.json
examples/anvil/app/: BUILD.bazel
examples/anvil/app/src/main/: AndroidManifest.xml
examples/anvil/scopes/: BUILD.bazel
examples/associates/: BUILD.bazel  MODULE.bazel  WORKSPACE  maven_install.json
examples/associates/projects/core/api/: BUILD.bazel
examples/associates/projects/core/impl/: BUILD.bazel
examples/associates_dagger/: BUILD  MODULE.bazel  WORKSPACE  maven_install.json
examples/associates_dagger/projects/service/api/: BUILD.bazel
examples/associates_dagger/projects/service/app/: BUILD.bazel
examples/btapi_compat/: BUILD.bazel  MODULE.bazel  README.md  maven_install.json
examples/coverage/: BUILD.bazel  MODULE.bazel  README.md  test.sh  test_coverage.sh
examples/custom_compiler_version/: .bazelrc  .bazelversion  BUILD  MODULE.bazel  WORKSPACE  test_execution.sh
examples/custom_compiler_version/app/: BUILD  Main.kt
examples/dagger/: .bazelrc  BUILD  BUILD.bazel  Dummy.java  MODULE.bazel  WORKSPACE  maven_install.json
examples/dagger/src/coffee/: BUILD.bazel  CoffeeApp.kt  CoffeeMaker.kt  DripCoffeeModule.kt  ElectricHeater.kt  Heater.kt  Pump.kt  PumpModule.kt  Thermosiphon.kt
examples/dagger/src/heating/: BUILD.bazel  ElectricHeater.kt  Heater.kt
examples/dagger/src/pumping/: BUILD.bazel  Pump.kt  PumpModule.kt  Thermosiphon.kt
examples/dagger/src/time/: BUILD.bazel  Delayer.kt
examples/dagger/test/coffee/: BUILD.bazel  BasicTest.kt  BasicTestUtil.kt
examples/env_demo/: BUILD.bazel  Main.kt
examples/jetpack_compose/: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE  maven_install-1.9.22.json  maven_install-2.1.0.json  maven_install.json  platform_mappings  stability.conf
examples/jetpack_compose/app/: AndroidManifest.xml  BUILD
examples/jetpack_compose/compose-app/: AndroidManifest.xml  BUILD
examples/jetpack_compose/compose-ui/: AndroidManifest.xml  BUILD  MainActivity.kt
examples/jetpack_compose/stub/: BUILD
examples/kaptish/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
examples/kaptish/src/: Circle.kt  Rectangle.kt  Shape.kt
examples/kover/: BUILD.bazel  MODULE.bazel  README.md
examples/kover/app/: BUILD.bazel  Greeter.kt  GreeterTest.kt
examples/ksp/: BUILD  CoffeeApp.kt  CoffeeAppJavaModel.java  CoffeeAppModel.kt  CoffeeAppService.java  DripCoffeeModule.kt  MODULE.bazel  Pump.kt  PumpModule.kt  Thermosiphon.kt  WORKSPACE  maven_install.json
examples/ksp/app/: BUILD
examples/multiplex/: .bazelrc  MODULE.bazel  WORKSPACE
examples/multiplex/src/: BUILD.bazel  Big.kt  Small.kt  Small2.kt  Small3.kt  Small4.kt  temp.kt
examples/nested_module_resources/: BUILD.bazel  MODULE.bazel  Main.kt  NativeGreeter.kt  NativeGreeterTest.kt  NativeLibraryPathTest.kt  README.md  ResourceTest.kt  native_greeter.cc
examples/nested_module_resources/native/: native_resource_helper.cc
examples/nested_module_resources/nested/: BUILD.bazel  MODULE.bazel  Printer.kt
examples/nested_module_resources/static_resources/: source_no_prefix.txt
examples/nested_module_resources/strip_prefix_resources/: source_data.txt
examples/node/: .gitignore  BUILD  BUILD.bazel  MODULE.bazel  README.MD  WORKSPACE  package.json  pnpm-lock.yaml
examples/node/coroutines-helloworld/: BUILD  Main.kt
examples/node/express/: App.kt  BUILD  BUILD.bazel  Routes.kt
examples/node/express/auth/: Auth.kt  BUILD
examples/node/helloworld/: BUILD.bazel
examples/trivial/: .bazelrc  .editorconfig  BUILD  MODULE.bazel  WORKSPACE  maven_install.json  test_execution.sh
examples/trivial/app/: App.kt  BUILD.bazel  app.kt
kotlin/compiler/: BUILD  BUILD.release.bazel  compiler.bzl  compiler_deps.bzl  kapt.bzl  ksp.bzl  native.bzl
kotlin/settings/: BUILD.bazel  BUILD.release.bazel
src/legacy/: BUILD.bazel  WORKSPACE
src/legacy/starlark/: BUILD.bazel
src/legacy/starlark/jvm/: opts.bzl
src/legacy/starlark/kotlin/: BUILD.bazel  opts.bzl
tools/toolchains/: BUILD.bazel  BUILD.release.bazel
(+1136 files in other folders)
