module(
    name = "rules_kotlin",
    version = "1.9.0",
    compatibility_level = 1,
    repo_name = "rules_kotlin",
)
kotlin_version = "2.3.20-RC2"

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_java", version = "8.9.0")
bazel_dep(name = "rules_android", version = "0.7.1")
bazel_dep(name = "bazel_features", version = "1.39.0")
bazel_dep(name = "bazel_lib", version = "3.1.0")
bazel_dep(name = "rules_jvm_external", version = "6.10")

rules_java_toolchains = use_extension("@rules_java//java:extensions.bzl", "toolchains")
use_repo(rules_java_toolchains, "remote_java_tools")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")
http_file(
    name = "com_github_pinterest_ktlint",
    downloaded_file_path = "ktlint.jar",
    sha256 = "5ba1ac917a06b0f02daaa60d10abbedd2220d60216af670c67a45b91c74cf8bb",
    urls = [
        "https://github.com/pinterest/ktlint/releases/download/1.6.0/ktlint",
    ],
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "rules_kotlin_maven",
    artifacts = [
        "org.jetbrains:annotations:13.0",
        "org.jetbrains.kotlin:kotlin-build-tools-impl:{}".format(kotlin_version),
        "org.jetbrains.kotlin:kotlin-daemon-client:{}".format(kotlin_version),
        "org.jetbrains.kotlin:kotlin-stdlib:{}".format(kotlin_version),
        "org.jetbrains.kotlin:kotlin-reflect:{}".format(kotlin_version),
        "org.jetbrains.kotlin:kotlin-test:{}".format(kotlin_version),
        "org.jetbrains.kotlin:kotlin-script-runtime:{}".format(kotlin_version),
        "org.jetbrains.kotlin:kotlin-compiler:{}".format(kotlin_version),
        "org.jetbrains.kotlin:kotlin-annotation-processing-embeddable:{}".format(kotlin_version),
        "org.jetbrains.kotlin:kotlin-annotation-processing:{}".format(kotlin_version),
        "org.jetbrains.kotlin:jvm-abi-gen:{}".format(kotlin_version),
        "org.jetbrains.kotlin:kotlin-allopen-compiler-plugin:{}".format(kotlin_version),
        "org.jetbrains.kotlin:kotlin-noarg-compiler-plugin:{}".format(kotlin_version),
        "org.jetbrains.kotlin:kotlin-sam-with-receiver-compiler-plugin:{}".format(kotlin_version),
        "org.jetbrains.kotlin:kotlin-serialization-compiler-plugin:{}".format(kotlin_version),
        "org.jetbrains.kotlin:kotlin-parcelize-compiler:{}".format(kotlin_version),
        "org.jetbrains.kotlin:kotlin-parcelize-runtime:{}".format(kotlin_version),
        "org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm:1.10.2",
        "org.jetbrains.kotlinx:kotlinx-serialization-core-jvm:1.8.1",
        "org.jetbrains.kotlinx:kotlinx-serialization-json-jvm:1.8.1",
        "com.google.devtools.ksp:symbol-processing-aa:2.3.6",
        "com.google.devtools.ksp:symbol-processing-api:2.3.6",
        "com.google.devtools.ksp:symbol-processing-common-deps:2.3.6",
    ],
    fail_if_repin_required = True,
    fetch_sources = True,
    lock_file = "//:rules_kotlin_maven_install.json",
    repositories = [
        "https://maven-central.storage.googleapis.com/repos/central/data/",
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
    resolver = "maven",
)
use_repo(maven, "rules_kotlin_maven")

register_toolchains("//kotlin/internal:default_toolchain")
