module(name = "anvil-example")

bazel_dep(name = "rules_android", version = "0.7.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_java", version = "8.9.0")
bazel_dep(name = "rules_kotlin", version = "2.2.0")
bazel_dep(name = "rules_jvm_external", version = "6.6")

android_sdk_repository_extension = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")
use_repo(android_sdk_repository_extension, "androidsdk")

register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven_rules_kotlin_example",
    aar_import_bzl_label = "@rules_android//rules:rules.bzl",
    artifacts = [
        "com.google.dagger:dagger:2.50",
        "com.google.dagger:dagger-compiler:2.50",
        "com.google.dagger:dagger-producers:2.50",
        "com.squareup.anvil:compiler:2.4.9",
        "com.squareup.anvil:annotations:2.4.9",
        "androidx.activity:activity:1.0.0",
        "androidx.annotation:annotation:1.1.0",
        "androidx.appcompat:appcompat-resources:1.1.0",
        "androidx.appcompat:appcompat:1.1.0",
        "androidx.arch.core:core-common:2.1.0",
        "androidx.arch.core:core-runtime:2.0.0",
        "androidx.cardview:cardview:1.0.0",
        "androidx.collection:collection:1.1.0",
        "androidx.coordinatorlayout:coordinatorlayout:1.1.0",
        "androidx.core:core-ktx:1.3.0",
        "androidx.core:core:1.3.0",
        "androidx.cursoradapter:cursoradapter:1.0.0",
        "androidx.customview:customview:1.0.0",
        "androidx.drawerlayout:drawerlayout:1.0.0",
        "androidx.fragment:fragment:1.1.0",
        "androidx.interpolator:interpolator:1.0.0",
        "androidx.lifecycle:lifecycle-common:2.1.0",
        "androidx.lifecycle:lifecycle-livedata-core:2.0.0",
        "androidx.lifecycle:lifecycle-livedata:2.0.0",
        "androidx.lifecycle:lifecycle-runtime:2.1.0",
        "androidx.lifecycle:lifecycle-viewmodel:2.1.0",
        "androidx.loader:loader:1.0.0",
        "androidx.recyclerview:recyclerview:1.1.0",
        "androidx.savedstate:savedstate:1.0.0",
        "androidx.transition:transition:1.2.0",
        "androidx.vectordrawable:vectordrawable-animated:1.1.0",
        "androidx.vectordrawable:vectordrawable:1.1.0",
        "androidx.versionedparcelable:versionedparcelable:1.1.0",
        "androidx.viewpager2:viewpager2:1.0.0",
        "androidx.viewpager:viewpager:1.0.0",
        "com.google.android.material:material:1.1.0",
        "javax.inject:javax.inject:1",
        "junit:junit:4.13",
        "org.jetbrains.kotlin:kotlin-test:1.5.10",
        "com.google.truth:truth:1.0.1",
        "org.jetbrains:annotations:13.0",
    ],
    excluded_artifacts = [
        "org.jetbrains.kotlin:kotlin-stdlib",
        "org.jetbrains.kotlin:kotlin-stdlib-jdk8",
        "org.jetbrains.kotlin:kotlin-stdlib-jdk7",
        "org.jetbrains.kotlin:kotlin-compiler-embeddable",
        "org.jetbrains.kotlin:kotlin-reflect",
        "org.jetbrains.kotlin:kotlin-script-runtime",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
    use_starlark_android_rules = True,
)
use_repo(maven, "maven_rules_kotlin_example")
