
load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "define_kt_toolchain")

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = "1.5",  # "1.1", "1.2", "1.3", or "1.4"
    jvm_target = "1.8", # "1.6", "1.8", "9", "10", "11", "12", or "13",
    language_version = "1.5",  # "1.1", "1.2", "1.3", or "1.4"
)