load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library", "kt_jvm_test")

kt_jvm_library(
    name = "coverage_lib",
    srcs = ["src/main/kotlin/com/example/coverage/SimpleKotlinLib.kt"],
)

kt_jvm_test(
    name = "coverage_test",
    srcs = ["src/test/kotlin/com/example/coverage/SimpleKotlinTest.kt"],
    test_class = "com.example.coverage.SimpleKotlinTest",
    deps = [
        ":coverage_lib",
        "@junit4//:junit_junit",
    ],
)
